<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_player1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_player1_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player1_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_player2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_player2_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_player2_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dice"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dice_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:src="@drawable/dice_roll" />

        <ImageView
            android:id="@+id/dice_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:src="@drawable/dice_roll" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_player1_roll_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_player1"
        android:layout_alignParentStart="true"
        android:text="@string/roll_1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_player1_roll_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_player1"
        android:layout_alignParentEnd="true"
        android:text="@string/roll_2"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_player2_roll_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_player2"
        android:layout_alignParentStart="true"
        android:text="@string/roll_1"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_player2_roll_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_player2"
        android:layout_alignParentEnd="true"
        android:text="@string/roll_2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_dice"
        android:layout_centerHorizontal="true"
        android:text="@string/player_1_roll_dice"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_player1_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_player1"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/zero"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_player2_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_player2"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/zero"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_player1_roll_1"
        android:text="Player 1" />

    <TextView
        android:id="@+id/textViewP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_player2_roll_1"
        android:text="Player 2" />


</RelativeLayout>